versioned_docs/version-6.5.0/api/mask.mdx
---
title: mask
---

import * as turf from "turf-6";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Takes any type of [polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6) and an optional mask and returns a [polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6) exterior ring with holes.

### Parameters

| Name         | Type                                                                                                                                                                                                                                                                       | Description                                                                        |
| ------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
| polygon      | **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) \| [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6) \| [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7)>** | GeoJSON Polygon used as interior rings or holes.                                   |
| mask<i>?</i> | **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6)>**                                                                                                                                              | GeoJSON Polygon used as the exterior ring (if undefined, the world extent is used) |

### Returns

<ul>
  **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6)>** Masked Polygon (exterior ring with holes).

</ul>

### Examples

```javascript
var polygon = turf.polygon([
  [
    [112, -21],
    [116, -36],
    [146, -39],
    [153, -24],
    [133, -10],
    [112, -21],
  ],
]);
var mask = turf.polygon([
  [
    [90, -55],
    [170, -55],
    [170, 10],
    [90, 10],
    [90, -55],
  ],
]);

var masked = turf.mask(polygon, mask);
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var polygon = turf.polygon([
    [
      [112, -21],
      [116, -36],
      [146, -39],
      [153, -24],
      [133, -10],
      [112, -21],
    ],
  ]);
  var mask = turf.polygon([
    [
      [90, -55],
      [170, -55],
      [170, 10],
      [90, 10],
      [90, -55],
    ],
  ]);

  var masked = turf.mask(polygon, mask);

  //addToMap
  var addToMap = { masked };
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<!-- prettier-ignore -->
<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/mask

import { mask } from "@turf/mask";
const result = mask(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.mask(...);
```
